syntax = "proto3";

package berty.p2p;

option go_package = "berty.tech/core/api/p2p";

import "entity/envelope.proto";
import "entity/void.proto";

service Service {
  // HandleEnvelope is the default p2p handler, it receives an envelope containing an encrypted event
  rpc HandleEnvelope(entity.Envelope) returns (entity.Void) {};

  rpc Ping(entity.Void) returns (entity.Void) {};
}
